# graph-rag

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: ARCHITECTURE.md
src/graphrag/: __init__.py  __main__.py  config.py
src/graphrag/cli/: main.py
src/graphrag/db/: cache.py  connection.py  queries.py  query_service.py  repository.py  schema.py  scip_queries.py
src/graphrag/indexer/: base.py  dependencies.py  feature_service.py  git_utils.py  service.py  swift_parser.py  utils.py
src/graphrag/indexer/project_parsers/: __init__.py  swift_geko.py
src/graphrag/mcp/: server.py
src/graphrag/models/: records.py
tests/: conftest.py  test_cache.py  test_connection.py  test_feature_indexer.py  test_graph_queries.py  test_indexer_service.py  test_materialized_views.py  test_mcp_server.py  test_project_parser.py  test_query_service.py  test_repository.py  test_schema.py  test_scip_queries.py  test_swift_parser.py  test_system_integration.py
tests/fixtures/swift/: Sample.swift
tests/fixtures/swift_project/FeatureModule/: Project.swift
tests/fixtures/swift_project/FeatureModule/Targets/FeatureModule/Sources/Assembly/: FeatureAssembly.swift
tests/fixtures/swift_project/FeatureModule/Targets/FeatureModule/Sources/Presenter/: FeaturePresenter.swift  (+1 more)
tests/fixtures/swift_project/SimpleCore/: Project.swift
tests/fixtures/swift_project/SimpleCore/Targets/SimpleCore/Sources/: SimpleService.swift  SimpleServiceAssembly.swift
tests/fixtures/swift_project/SimpleCore/Targets/SimpleCoreIO/Sources/: ISimpleService.swift  ISimpleServiceAssembly.swift
(+9 files in other folders)
